# sjson

./: .gitignore  .hgignore  LICENSE.txt  README.md  Readme.md  Test.py  bitbucket-pipelines.yml  decode.py  encode.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml
sjson/: __init__.py
sjson/test/: test_sjson.py
