[project]
name = "SJSON"
dynamic = ["version"]

authors = [
    {name = "Matthäus G. Chajdas", email = "dev@anteru.net" }
]

description = "SJSON serializer/deserializer for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "BSD 3-clause license"}

keywords = ["SJSON"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">= 3.6"

[project.urls]
Homepage = "http://sh13.net/projects/SJSON"
"Issue Tracker" = "https://github.com/anteru/sjson/issues"
Repository = "https://github.com/anteru/sjson"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist=py36,py37,py38,py39,py310,py311,py312

[testenv]
deps=
	pytest
commands=
	pytest sjson

[testenv:cov]
deps=
	pytest
	pytest-cov
	coverage
commands=
	pytest --cov=sjson sjson
	coverage html
"""

[tool.hatch.version]
path = "sjson/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = ["test"]
